--- a/config/geth.yaml
+++ b/config/geth.yaml
@@ -16,6 +16,22 @@ spec:
       containers:
       - name: geth
         image: docker.io/ethereum/client-go:v1.10.25
+        args:
+        - "--http"
+        - "--http.addr \"0.0.0.0\""
+        - "--http.corsdomain=\"*\""
+        - "--http.port 8545"
+        - "--http.vhosts "*""
+        - "--http.api 'admin,personal,eth,net,web3,txpool,miner,clique,debug'"
+        - "--password /data/password"
+        - "--allow-insecure-unlock"
+        - "--nodiscover"
+        - "--verbosity 4"
+        - "--miner.gastarget 804247552"
+        - "--miner.gasprice 0"
+        - "--mine --datadir /data"
+        - "--networkid 1999"
+        - "--miner.etherbase=0x00000000000000000000000000000000000000af"
         imagePullPolicy: Always
         ports:
         - containerPort: 8545
@@ -26,15 +42,15 @@ spec:
       volumes:
       - name: volume
         persistentVolumeClaim:
-          claimName: test
+          claimName: geth
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: test
+  name: geth
   labels:
     # insert any desired labels to identify your claim
-    app: test
+    app: geth
 spec:
   storageClassName: standard
   accessModes:
@@ -42,4 +58,4 @@ spec:
   resources:
     requests:
       # The amount of the volume's storage to request
-      storage: 2Gi
+      storage: 1Gi
